# kolibri_test

./: CMakeLists.txt  main.cpp
include/: jobconfig.hpp  utils.hpp
src/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui  worker.cpp  worker.hpp
